ikiwiki (2.64) UNRELEASED; urgency=low

  * Avoid uninitialised value when --dumpsetup is used and no srcdir/destdir
    specified.

 -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 19:21:20 -0400

ikiwiki (2.63) unstable; urgency=low

  * Set cookies HttpOnly.
  * Typo. Closes: #497003
  * Ignore failure to install files into /etc, in case install is running as
    non-root.
  * Work around perl $_ scoping nonsense that caused breakage when loading
    external plugins.
  * style.css: Add missing semicolon. Closes: #497176 
  * filecheck: Fall back to testing for binary or plain text files
    if no mime type is detected.
  * table: Support header=column to make the table header be the first
    column of the data. (AlexandreDupas)
  * For fine control over what characters are allowed, unescaped in
    source filenames, the wiki_file_chars setting is added. For example,
    set to "-[:alnum:]+/._" to disable colons from being used in source files
    (which can cause troubl om Windows).
  * po/Makefile: update po files when the pot file has changed.
    Closes: #497951
  * editpage: New core plugin factoring out page editing to allow disabling it
    if desired.

 -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 12:17:15 -0400

ikiwiki (2.62.1) unstable; urgency=low

  * filecheck: Fixed two bits broken in move from attachment.

 -- Joey Hess <joeyh@debian.org>  Thu, 28 Aug 2008 13:04:47 -0400

ikiwiki (2.62) unstable; urgency=low

  * Avoid using cp -a (again). (HenrikBrixAndersen)
  * Avoid using hostname -f for portability to eg, OS X, use Net::Domain
    instead, and prompt if it fails.
  * Fix bug in wikiname sanitisation in the setup automator.
  * ikiwiki-makerepo: Added support for monotone. (Thomas Keller)
  * map: The fix for #449285 was buggy and broke display of parents in certain
    circumstances.
  * teximg: The prefix is configurable, and has changed to not include the
    nonstandard mhchem by default. (willu)