@@ -3,3 +3,5 @@ If the timeformat option is '%c', every time websetup rewrites the setup file, i
 Presumably this is because websetup loads all plugins, so IkiWiki::plugin::ddate::checkconfig is run...
 
 (This bug seems oddly appropriate. Hail Eris)
+
+[[done fnord|done]]
