@@ -2,6 +2,7 @@ ikiwiki (2.64) UNRELEASED; urgency=low
 
   * Avoid uninitialised value when --dumpsetup is used and no srcdir/destdir
     specified.
+  * ddate: Stop clobbering timeformat when not enabled.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 19:21:20 -0400
 
